# controlburn

./: ControlBurnDemoNotebook.ipynb  README.md  paper.Rmd  paper.md  refs.bib
ControlBurnExperiments/Plotting Notebooks/: Grid Line Plot.ipynb  Histogram Plot.ipynb
ControlBurnExperiments/Results/: Hill_Valley_without_noise_bagboost_5fold.csv  agaricus_lepiota_bagboost_10fold.csv  audit_bagboost_10fold.csv  audit_bagboost_5fold.csv  breast_cancer_wisconsin_bagboost_10fold.csv  breast_w_bagboost_10fold.csv  buggyCrx_bagboost_10fold.csv  chess_bagboost_5fold.csv  churn_bagboost_5fold.csv  clean2_bagboost_10fold.csv  credit_a_bagboost_10fold.csv  credit_g_bagboost_10fold.csv  diabetes_bagboost_5fold.csv  flare_bagboost_10fold.csv  genewest_bagboost_10fold.csv  german_bagboost_10fold.csv  glass2_bagboost_10fold.csv  heart_c_bagboost_10fold.csv  ionosphere_bagboost_5fold.csv  mushroom_bagboost_5fold.csv  pima_bagboost_5fold.csv  (+5 more)
ControlBurnPackage/: ._README.md  ._pyproject.toml  ._setup.cfg  ControlBurn.py  README.md  documentation.html  setup.cfg
ControlBurnPackage/Documentation/: ControlBurn Documentation.html
ControlBurnPackage/notebooks/: ControlBurnDemo.ipynb
ControlBurnPackage/notebooks/.ipynb_checkpoints/: ControlBurnDemo-checkpoint.ipynb
ControlBurnPackage/src/: ControlBurnInterpret.py  ControlBurnModel.py
ControlBurnPackage/src/ControlBurn/: .___init__.py  ControlBurnInterpret.py  ControlBurnModel.py
ControlBurnPackage/src/ControlBurn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Demo/: Titanic Data Generation.ipynb  TitanicDataCorrelatedFeatures.csv
(+36 files in other folders)
